--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -7,28 +7,60 @@
     <title>Tacos - Odin Project Recipes</title>
   </head>
   <body>
-    <h1>Lasagna</h1>
+    <h1>Carne Asada Tacos</h1>
     <img src="../images/tacos.webp" alt="A picture of tacos" />
     <h2>Description</h2>
     <p>
-      A classic baked Italian dish comprised of layers of cheese, meat sauce,
-      and wide pasta noodles.
+      Quick and tasty authentic mexican street food, all of the flavour none of
+      the frills.
     </p>
     <h3>Ingredients</h3>
+    <h4>For the Carne Asada:</h4>
     <ul>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>1 ½ lbs flank steak</li>
+      <li>⅓ cup olive oil</li>
+      <li>3 limes, juiced</li>
+      <li>½ cup fresh cilantro, chopped</li>
+      <li>4 garlic cloves, minced</li>
+      <li>1 tsp cumin powder</li>
+      <li>½ tsp chili powder</li>
+      <li>salt and pepper, to taste</li>
+    </ul>
+    <h4>For the Tacos:</h4>
+    <ul>
+      <li>Carne Asada (see above)</li>
+      <li>2 avocados</li>
+      <li>3 tbsp cotija cheese</li>
+      <li>1/3 cup onion, finely diced</li>
+      <li>1/2 cup fresh cilantro, chopped</li>
+      <li>6 tortillas</li>
+      <li>limes, for garnish</li>
     </ul>
     <h3>Steps</h3>
     <ol>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>Whisk all of the marinade ingredients together in a small bowl.</li>
+      <li>
+        Add the steak to a glass or non-reactive baking tray and pour the
+        marinade on top. Ensure both side of the steak are well coated, cover
+        the baking tray with plastic wrap and marinate for 1-4 hours.
+        Alternatively, you could marinate in a plastic bag.
+      </li>
+      <li>
+        Heat a grill on medium-high heat. Add the carne asada and cook for 5-7
+        minutes on each side. Remove the steak to a cutting board and let it
+        rest for another 5 minutes.
+      </li>
+      <li>
+        Using a sharp knife, slice the carne asada at an angle against the
+        grain. From there, you can further chop the carne asada into smaller
+        pieces, if you'd like.
+      </li>
+      <li>
+        Use a spoon to mash the avocado and spread a large spoonful or two onto
+        each tortilla. Then, top the avocado with chopped carne asada, a
+        sprinkle of cotija cheese, some diced onion and fresh cilantro. Squeeze
+        fresh lime juice on top.
+      </li>
     </ol>
   </body>
 </html>
