Added classes and some styling to all webpages

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -4,95 +4,103 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles.css" />
     <title>Pizza - Odin Project Recipes</title>
   </head>
   <body>
-    <h1>Wood-Fired Sourdough Pizza Dough Recipe</h1>
-    <img src="../images/pizza.jpg" alt="A picture of pizza" />
-    <h2>Description</h2>
-    <p>
-      A delicious pizza recipe that has incredible depth of flavour from the
-      sourdough crust. A little bit of extra prep but it goes a long way.
-    </p>
-    <h3>Ingredients</h3>
-    <h4>Levain</h4>
-    <ul>
-      <li>34g white flour (about 12.5% protein)</li>
-      <li>34g water</li>
-      <li>34g ripe sourdough starter, 100% hydration</li>
-    </ul>
-    <h4>Main Dough</h4>
-    <ul>
-      <li>573g white flour (about 12.5% protein)</li>
-      <li>34g whole wheat flour</li>
-      <li>34g durum flour (“extra fancy”)</li>
-      <li>357g water 1</li>
-      <li>27g water 2</li>
-      <li>14g fine sea salt</li>
-      <li>101g ripe levain</li>
-    </ul>
-    <h3>Steps</h3>
-    <ol>
-      <li>
-        <strong>Levain – 9:00 a.m.<br /></strong>
-        Mix the levain ingredients in a jar and leave them covered at a warm
-        temperature, 74-76°F (23-24°C), to ripen for 3 hours.
-      </li>
-      <li>
-        <strong>Mix – 12:00 p.m.<br /></strong>
-        To the bowl of a stand mixer fitted with the dough hook attachment, add
-        the flour, water 1, and ripe levain. Mix on low speed for 2 to 3 minutes
-        until the ingredients come together and no dry bits remain. Increase the
-        mixer speed to medium (I use #6 on the Famag) and mix for 3 to 4 minutes
-        until the dough begins to smooth. Let the dough rest in the bowl for 10
-        minutes, covered. Add the salt and water 2 to help it dissolve. Mix on
-        low speed for 2 minutes until the salt is incorporated. Then, increase
-        the mixer speed to medium and mix for 4 to 5 minutes until the dough
-        clumps around the dough hook and is smooth and elastic. Transfer the
-        dough to a bulk fermentation container and cover.
-      </li>
-      <li>
-        <strong
-          >Bulk fermentation – 12:15 p.m. to 3:15 p.m. (3 hours)<br
-        /></strong>
-        At a warm room temperature, 74-76°F (23-24°C), bulk fermentation should
-        take about 3 hours. The dough does not require any sets of stretches and
-        folds.
-      </li>
-      <li>
-        <strong
-          >Divide, ball and cold-proof – 3:15 p.m. (overnight)<br
-        /></strong>
-        Grease a large dough tray, half sheet pan, or four individual 4-cup
-        containers with olive oil. Scrape the dough out to the counter and
-        divide it into 280g pieces. Shape tightly into balls and place in the
-        proofing container(s). Cover and place into the refrigerator overnight
-        (or up to 2 days later).
-      </li>
-      <li>
-        <strong>Warm proof – 9:00 a.m. to 12:00 p.m.<br /></strong>
-        Take the dough out of the refrigerator and let it finish proofing at
-        room temperature for 3 hours before shaping and cooking.
-      </li>
-      <li>
-        <strong>Shape and cook – 12:00 p.m.<br /></strong>
-        Preheat your high-heat oven until the floor of the oven reaches your
-        desired temperature (I prefer around 650°F/340°C). Prepare your pizza
-        sauce and any other toppings. Flour a work surface and the tops of the
-        dough balls. Scoop up one dough ball and flip it over onto the floured
-        work surface. Sprinkle flour on top and use your hands, shaped like an
-        inverted “V,” to press out the dough from top to bottom. Rotate the ball
-        and press it out again. Then, flip the dough over and again, with your
-        hands shaped like an inverted “V,” press the dough out. Next, pick up
-        the dough with your hands, make fists, and drape the dough over your
-        knuckles. Gently and slowly, pull your hands apart to stretch the dough.
-        Rotate the dough over your hands and continue to stretch in this way a
-        few more times until the dough has spread to about 10-inches in
-        diameter. Lay the dough back on the work surface. Top the dough with
-        sauce, cheese, and any toppings suitable for cooking in the oven. Slide
-        the dough onto a pizza peel, and then slide it into the oven. Cook and
-        repeat with remaining dough.
-      </li>
-    </ol>
+    <div class="recipe-card">
+      <h1>Wood-Fired Sourdough Pizza Dough Recipe</h1>
+      <img
+        class="recipe-image"
+        src="../images/pizza.jpg"
+        alt="A picture of pizza"
+      />
+      <h2>Description</h2>
+      <p>
+        A delicious pizza recipe that has incredible depth of flavour from the
+        sourdough crust. A little bit of extra prep but it goes a long way.
+      </p>
+      <h3>Ingredients</h3>
+      <h4>Levain</h4>
+      <ul class="ingredients">
+        <li>34g white flour (about 12.5% protein)</li>
+        <li>34g water</li>
+        <li>34g ripe sourdough starter, 100% hydration</li>
+      </ul>
+      <h4>Main Dough</h4>
+      <ul class="ingredients">
+        <li>573g white flour (about 12.5% protein)</li>
+        <li>34g whole wheat flour</li>
+        <li>34g durum flour (“extra fancy”)</li>
+        <li>357g water 1</li>
+        <li>27g water 2</li>
+        <li>14g fine sea salt</li>
+        <li>101g ripe levain</li>
+      </ul>
+      <h3>Steps</h3>
+      <ol class="steps">
+        <li>
+          <strong>Levain – 9:00 a.m.<br /></strong>
+          Mix the levain ingredients in a jar and leave them covered at a warm
+          temperature, 74-76°F (23-24°C), to ripen for 3 hours.
+        </li>
+        <li>
+          <strong>Mix – 12:00 p.m.<br /></strong>
+          To the bowl of a stand mixer fitted with the dough hook attachment,
+          add the flour, water 1, and ripe levain. Mix on low speed for 2 to 3
+          minutes until the ingredients come together and no dry bits remain.
+          Increase the mixer speed to medium (I use #6 on the Famag) and mix for
+          3 to 4 minutes until the dough begins to smooth. Let the dough rest in
+          the bowl for 10 minutes, covered. Add the salt and water 2 to help it
+          dissolve. Mix on low speed for 2 minutes until the salt is
+          incorporated. Then, increase the mixer speed to medium and mix for 4
+          to 5 minutes until the dough clumps around the dough hook and is
+          smooth and elastic. Transfer the dough to a bulk fermentation
+          container and cover.
+        </li>
+        <li>
+          <strong
+            >Bulk fermentation – 12:15 p.m. to 3:15 p.m. (3 hours)<br
+          /></strong>
+          At a warm room temperature, 74-76°F (23-24°C), bulk fermentation
+          should take about 3 hours. The dough does not require any sets of
+          stretches and folds.
+        </li>
+        <li>
+          <strong
+            >Divide, ball and cold-proof – 3:15 p.m. (overnight)<br
+          /></strong>
+          Grease a large dough tray, half sheet pan, or four individual 4-cup
+          containers with olive oil. Scrape the dough out to the counter and
+          divide it into 280g pieces. Shape tightly into balls and place in the
+          proofing container(s). Cover and place into the refrigerator overnight
+          (or up to 2 days later).
+        </li>
+        <li>
+          <strong>Warm proof – 9:00 a.m. to 12:00 p.m.<br /></strong>
+          Take the dough out of the refrigerator and let it finish proofing at
+          room temperature for 3 hours before shaping and cooking.
+        </li>
+        <li>
+          <strong>Shape and cook – 12:00 p.m.<br /></strong>
+          Preheat your high-heat oven until the floor of the oven reaches your
+          desired temperature (I prefer around 650°F/340°C). Prepare your pizza
+          sauce and any other toppings. Flour a work surface and the tops of the
+          dough balls. Scoop up one dough ball and flip it over onto the floured
+          work surface. Sprinkle flour on top and use your hands, shaped like an
+          inverted “V,” to press out the dough from top to bottom. Rotate the
+          ball and press it out again. Then, flip the dough over and again, with
+          your hands shaped like an inverted “V,” press the dough out. Next,
+          pick up the dough with your hands, make fists, and drape the dough
+          over your knuckles. Gently and slowly, pull your hands apart to
+          stretch the dough. Rotate the dough over your hands and continue to
+          stretch in this way a few more times until the dough has spread to
+          about 10-inches in diameter. Lay the dough back on the work surface.
+          Top the dough with sauce, cheese, and any toppings suitable for
+          cooking in the oven. Slide the dough onto a pizza peel, and then slide
+          it into the oven. Cook and repeat with remaining dough.
+        </li>
+      </ol>
+    </div>
   </body>
 </html>
